// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> Brand story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="1"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> BrandDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="13"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="14"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> BrandWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="8"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> DismissableBelowContent story renders snapshot 1`] = `
<h1
  class="heading heading--size-h1 heading"
>
  Page Title
</h1>
`;

exports[`<Banner /> DismissableWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="23"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="24"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> Error story renders snapshot 1`] = `
<aside
  class="banner banner--error banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="5"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--error"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> ErrorDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--error banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="21"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--error"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="22"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> ErrorWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--error banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="12"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--error"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--error button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Flat story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal banner--flat"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="33"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Neutral story renders snapshot 1`] = `
<aside
  class="banner banner--neutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="2"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--neutral-strong"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> NeutralDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--neutral banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="15"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--neutral-strong"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="16"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> NeutralWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--neutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="9"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--neutral-strong"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> NoDescription story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="6"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> NoTitle story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="7"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Success story renders snapshot 1`] = `
<aside
  class="banner banner--success banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="3"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--success"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> SuccessDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--success banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="17"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--success"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="18"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> SuccessWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--success banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="10"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--success"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--success button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Vertical story renders snapshot 1`] = `
<aside
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="27"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> VerticalDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="28"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="29"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> VerticalDismissableWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="31"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="32"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> VerticalWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="30"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Warning story renders snapshot 1`] = `
<aside
  class="banner banner--warning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="4"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--warning"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> WarningDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--warning banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="19"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--warning"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="20"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> WarningWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--warning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="11"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--warning"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--warning button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;
